--- a/todo.txt
+++ b/todo.txt
@@ -18,10 +18,17 @@ No consideration for ship orientation during collision tests
 Solution: Implement more precise hitbox system using ship vertex data
 
 - Fix AI behavior inconsistencies and edge cases
+
+aI swithcing really quicly making red line jitter
+
 - Improve enemy targeting and combat decisions
 - Fix potential memory leaks with explosion particles
 - Correct remaining ship rotation angle issues (degrees vs radians)
 - Improve handling of edge cases in the solar system generation
+
+- Alien ships should not be vailable to buy
+
+
 
 ## Core Gameplay Enhancements
 
