--- a/todo.txt
+++ b/todo.txt
@@ -2,9 +2,9 @@
 
 ## Bugs and Issues
 
-put back the spinning cargo that dissapears
+put the messagses in teh corner with 10 lines
 
-- aI swithcing really quicly making red line jitter
+limit the amount of goods aer availbe at certain planets based on their econmy
 
 - Fix weapon buying into slots on ship.currently just temp overwrites first weapon
 Issue: When buying weapons, it currently just overwrites the first weapon slot
