--- a/features/todo.txt
+++ b/features/todo.txt
@@ -7,6 +7,8 @@ i am not sure if the enemy idle bug has gone now
 weapon selection is wrong
 
 
+sho sun big on minimap
+
 cargo smal
 
 I AM NOt SURE IF THE BOUNTY IS counting old kills
