--- a/features/todo.txt
+++ b/features/todo.txt
@@ -6,8 +6,8 @@
 
 ## Core Gameplay Enhancements
 
+ai logic for force weapons and for tangle weapons
 
-weapon disable thrust
 
 protective barrier
 
